--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,7 +7,7 @@ html
 		meta(charset="utf-8")
 		link(rel="stylesheet", type="text/css", href="/stylesheets/main.css")
 		script(type="text/javascript", src="/javascripts/libraries/jquery-1.7.2.min.js")
-		script(type="text/javascript", src="/javascripts/libraries/jquery.validate.min.js")
+		script(type="text/javascript", src="/javascripts/libraries/jquery.validate-1.9.0.min.js")
 		script(type="text/javascript", src="/javascripts/libraries/jquery.qtip-1.0.0-rc3.min.js")
 		script(type="text/javascript", src="/javascripts/main.js")
 		- each content in headContents			
