--- a/views/sign/verify.jade
+++ b/views/sign/verify.jade
@@ -30,8 +30,8 @@ script(type="text/javascript")
 			name: { required:'请输入你的姓名' },
 			idNumber: { required: '请输入你的身份证号' }
 		},
-		
-		errorPlacement: function (error, element) {	
+
+		errorPlacement: function (error, element) {
 			var hasTip = false;
 			// qtip似乎没有提供检测元素上是否已设置tip的api，只能try...cathch了
 			try {
@@ -46,26 +46,26 @@ script(type="text/javascript")
 					position: {
 						corner: { target: 'rightMiddle', tooltip: 'leftMiddle' }
 					},
-					style: { 
+					style: {
 						name: 'red',
 						border: { radius: 4 },
 						tip: { corner: 'leftMiddle' }
 					}
-				}).qtip('show');					
+				}).qtip('show');
 			} else {
 				element.qtip('api').updateContent(error.text(), false);
 				element.qtip('show');
-			}										
+			}
 		},
 		unhighlight: function(element, errorClass, validClass) {
 			$(element).removeClass(errorClass).addClass(validClass);
 			try {
-				$(element).qtip('hide').qtip('disable');				
+				$(element).qtip('hide').qtip('disable');
 			} catch (exception) {}
 		}
 	});
-if locals.err
+if locals.errorMsg
 	script(type="text/javascript")
 		$(function () {
-			alert('#{locals.err}');
+			alert('#{locals.errorMsg}');
 		});
