--- a/app/views/site/index.jade
+++ b/app/views/site/index.jade
@@ -1,1 +1,9 @@
 ﻿
+#navigate
+	h1 08软2同学录
+	a(href="/edit") 修改我的信息
+#list
+	ul
+		for info in infos
+			li 
+				a(href="/info:#{info.no}") 姓名: #{info.name}
