--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -3,10 +3,34 @@
 	padding: 0; 
 	font-size: 14px;
 }
-
-#wraper { 
+#wrapper { 
 	width: 960px; 
 	margin: 0 auto; 
+	padding: 20px 0;
+}
+#header {
+	margin-bottom: 10px;
+	border-top: 3px solid black;
+	border-bottom: 1px solid #CCC;
+	height: 62px;
+}
+#header h1 {
+	display: inline-block;
+	line-height: 66px;
+	margin-left: 20px;
+}
+#header h1 a {
+	text-decoration: none;
+	font-size: 20px;
+}
+#header .menu {
+	float: right;
+	line-height: 66px;
+	margin-right: 20px;
+}
+#header .menu a {
+	text-decoration: none;
+	padding: 10px 5px;
 }
 #container {
 	background-color: #E7EEF1;
